# SerialPort

app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/guoxiaofei/serialport/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: SerialPort.c  native-lib.cpp
app/src/main/cpp/include/: SerialPort.h
app/src/main/java/com/guoxiaofei/serialport/: MainActivity.java  SerialPort.java  SerialPortFinder.java  SerialPortUtil.java
app/src/test/java/com/guoxiaofei/serialport/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
